--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
+    "figlet": "^1.10.0",
     "joi": "^18.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^9.1.5",
